HEAD
	+ In the tunnel client bundle don't allow additional server
	  addresses because they are not supported
3.2
	+ Set version to 3.2
3.1.2
	+ Upgraded OpenVPN installer for Windows to 2.3.2
3.1.1
	+ Adapted to updatedRowNotify call with no changes in values
	+ Added menu icon
	+ Adapt firewall rules to new accept chains
3.1
	+ Updated to reflect the Apache -> WebAdmin rename.
	+ Removed 3.0.X migration code
	+ Added advertised routes option to the clients
	+ Added option that allows server tunnels to reject any route from
	  the clients
	+ Client to client connection option is always enforced for tunnel servers
	+ Added Pre-Depends on mysql-server to avoid problems with upgrades
	+ Depend on zentyal-core 3.1
3.0.5
	+ Create correctly advertised network objects for interfaces with
	  more than one address in the same network
3.0.4
	+ Better filename for tunnel client bundle
	+ Zebra daemon debug controlled by global debug setting
	+ Allow again client-to-client connection in tunnel mode
	+ ripd debug output controlled by debug key
	+ Modified daemon management to use methods from EBox::Module::Service
	+ Daemon configuration files are created, as expected, in _setConf method
3.0.3
	+ LogHelper does not sees longer 'X509NAME OK' verification status
	  as unknown
	+ Added float option to clients to allow server IP/port changes
	+ Fixed LogHelper Client connection initiated regexp
	+ Fixed certificates check in client configuration form
3.0.2
	+ Adapted to changes in EBox::LogObserver::_convertTimestamp
3.0.1
	+ Fixed client configuration model to allow its edition without
	  changing certificate files
2.3.12
	+ Move report code to remoteservices
2.3.11
	+ Dont create servers which its name maps to a invalid certificate
	+ Fixed error in template for server's client bundle
2.3.10
	+ VPN is now under Infrastructure instead of UTM
	+ Add PID file to make compatible with init.d script to check the
	  current daemon status