@@ -1,4 +1,6 @@
 HEAD
+	+ Precondition to assure they are certificate availables in
+	  DownloadClientBundle model
 	+ In the tunnel client bundle don't allow additional server
 	  addresses because they are not supported
 3.2
